@@ -12,7 +12,6 @@ import uk.gov.hmcts.ecm.common.client.CcdClient;
 import uk.gov.hmcts.ecm.common.idam.models.UserDetails;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
-import uk.gov.hmcts.et.common.model.ccd.Address;
 import uk.gov.hmcts.et.common.model.ccd.AuditEvent;
 import uk.gov.hmcts.et.common.model.ccd.CCDCallbackResponse;
 import uk.gov.hmcts.et.common.model.ccd.CCDRequest;
@@ -43,14 +42,12 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -124,6 +121,8 @@ class NocRespondentRepresentativeServiceTest {
     private OrganisationClient organisationClient;
     @MockBean
     private AuthTokenGenerator authTokenGenerator;
+    @MockBean
+    private NocService nocService;
 
     private NocRespondentHelper nocRespondentHelper;
     private CaseData caseData;
@@ -137,7 +136,7 @@ class NocRespondentRepresentativeServiceTest {
         nocRespondentRepresentativeService =
             new NocRespondentRepresentativeService(noticeOfChangeFieldPopulator, converter, nocCcdService,
                     adminUserService, nocRespondentHelper, nocNotificationService, ccdClient, ccdCaseAssignment,
-                    organisationClient, authTokenGenerator);
+                    organisationClient, authTokenGenerator, nocService);
                     
         // Respondent
         caseData.setRespondentCollection(new ArrayList<>());
@@ -270,7 +269,7 @@ class NocRespondentRepresentativeServiceTest {
         when(nocCcdService.getLatestAuditEventByName(any(), any(), any())).thenReturn(
             Optional.of(mockAuditEvent()));
 
-        nocRespondentRepresentativeService.updateRepresentation(caseDetails);
+        nocRespondentRepresentativeService.updateRespondentRepresentation(caseDetails);
 
         assertThat(
             caseData.getRepCollection().get(1).getValue().getRespondentOrganisation().getOrganisationID()).isEqualTo(
@@ -334,13 +333,13 @@ class NocRespondentRepresentativeServiceTest {
                 .data(caseData)
                 .build());
 
-        nocRespondentRepresentativeService.updateRepresentativesAccess(getCallBackCallbackRequest());
+        nocRespondentRepresentativeService.updateRepresentativesAccess(getCallBackCallbackRequest(), "test@test.com");
 
         verify(nocCcdService, times(2))
             .updateCaseRepresentation(any(), any(), any(), any());
 
         verify(nocNotificationService, times(2))
-                .sendNotificationOfChangeEmails(any(), any(), any());
+                .sendNotificationOfChangeEmails(any(), any(), any(), anyString());
 
         verify(ccdClient, times(2))
                 .submitUpdateRepEvent(any(), any(), any(), any(), any(), any());
@@ -585,33 +584,6 @@ class NocRespondentRepresentativeServiceTest {
     }
 
     @Test
-    void removeOrganisationRepresentativeAccess() throws IOException {
-        UserDetails mockUser = getMockUser();
-        when(adminUserService.getUserDetails(any())).thenReturn(mockUser);
-        when(adminUserService.getAdminUserToken()).thenReturn(AUTH_TOKEN);
-        when(nocCcdService.getCaseAssignments(any(), any())).thenReturn(
-            mockCaseAssignmentData());
-        doNothing().when(nocCcdService).revokeCaseAssignments(any(), any());
-
-        Organisation oldOrganisation =
-            Organisation.builder().organisationID(ORGANISATION_ID_TWO)
-                .organisationName(ET_ORG_2).build();
-
-        Organisation newOrganisation =
-            Organisation.builder().organisationID(ORGANISATION_ID_NEW)
-                .organisationName(ET_ORG_NEW).build();
-
-        ChangeOrganisationRequest changeOrganisationRequest =
-            createChangeOrganisationRequest(newOrganisation, oldOrganisation);
-
-        nocRespondentRepresentativeService
-            .removeOrganisationRepresentativeAccess(CASE_ID_ONE, changeOrganisationRequest);
-
-        verify(nocCcdService, times(1))
-            .revokeCaseAssignments(any(), any());
-    }
-
-    @Test
     void prepopulateOrgAddressAndName() {
         OrganisationsResponse resOrg1 = createOrganisationsResponse(ORGANISATION_ID, ET_ORG_1);
         OrganisationsResponse resOrg2 = createOrganisationsResponse(ORGANISATION_ID_TWO, ET_ORG_2);
@@ -623,16 +595,16 @@ class NocRespondentRepresentativeServiceTest {
         orgDetails.add(resOrg3);
 
         when(organisationClient.getOrganisations(anyString(), anyString())).thenReturn(orgDetails);
-
+        caseData.getRepCollection().getFirst().getValue().setRepresentativeAddress(null);
         CaseData returned = nocRespondentRepresentativeService.prepopulateOrgAddress(caseData, "someToken");
 
         verify(organisationClient, times(1)).getOrganisations(anyString(), anyString());
 
         List<RepresentedTypeRItem> repCollection = returned.getRepCollection();
 
-        RepresentedTypeR rep1 = repCollection.get(0).getValue();
+        RepresentedTypeR rep1 = repCollection.getFirst().getValue();
         assertThat(rep1.getRepresentativeAddress().getAddressLine1())
-                .isEqualTo(resOrg1.getContactInformation().get(0).getAddressLine1());
+                .isEqualTo(resOrg1.getContactInformation().getFirst().getAddressLine1());
         assertThat(rep1.getNameOfOrganisation()).isEqualTo(resOrg1.getName());
 
         RepresentedTypeR rep2 = repCollection.get(1).getValue();
@@ -641,7 +613,7 @@ class NocRespondentRepresentativeServiceTest {
 
         RepresentedTypeR rep3 = repCollection.get(2).getValue();
         assertThat(rep3.getRepresentativeAddress().getAddressLine1())
-                .isEqualTo(resOrg3.getContactInformation().get(0).getAddressLine1());
+                .isEqualTo(resOrg3.getContactInformation().getFirst().getAddressLine1());
         assertThat(rep3.getNameOfOrganisation()).isEqualTo(resOrg3.getName());
     }
 
@@ -710,9 +682,9 @@ class NocRespondentRepresentativeServiceTest {
         OrganisationsResponse resOrg2 = createOrganisationsResponse(ORGANISATION_ID_TWO, ET_ORG_2);
         resOrg2.setContactInformation(new ArrayList<>());
         OrganisationsResponse resOrg3 = createOrganisationsResponse(ORGANISATION_ID_THREE, ET_ORG_3);
-        resOrg3.getContactInformation().get(0).setAddressLine1(null);
-        resOrg3.getContactInformation().get(0).setTownCity(null);
-        resOrg3.getContactInformation().get(0).setCountry(null);
+        resOrg3.getContactInformation().getFirst().setAddressLine1(null);
+        resOrg3.getContactInformation().getFirst().setTownCity(null);
+        resOrg3.getContactInformation().getFirst().setCountry(null);
 
         List<OrganisationsResponse> orgDetails = new ArrayList<>();
         orgDetails.add(resOrg1);
@@ -720,7 +692,7 @@ class NocRespondentRepresentativeServiceTest {
         orgDetails.add(resOrg3);
 
         when(organisationClient.getOrganisations(anyString(), anyString())).thenReturn(orgDetails);
-
+        caseData.getRepCollection().getFirst().getValue().setRepresentativeAddress(null);
         CaseData returned = nocRespondentRepresentativeService.prepopulateOrgAddress(caseData, "someToken");
 
         verify(organisationClient, times(1)).getOrganisations(anyString(), anyString());
@@ -730,49 +702,6 @@ class NocRespondentRepresentativeServiceTest {
         assertNull(repCollection.get(0).getValue().getRepresentativeAddress());
         assertNull(repCollection.get(1).getValue().getRepresentativeAddress());
         assertNull(repCollection.get(2).getValue().getRepresentativeAddress().getAddressLine1());
-    }
-
-    @Test
-    void prepopulateOrgAddress_OverwriteExistingAddress() {
-        OrganisationsResponse resOrg1 = createOrganisationsResponse(ORGANISATION_ID, ET_ORG_1);
-        OrganisationsResponse resOrg2 = createOrganisationsResponse(ORGANISATION_ID_TWO, ET_ORG_2);
-        OrganisationsResponse resOrg3 = createOrganisationsResponse(ORGANISATION_ID_THREE, ET_ORG_3);
-
-        List<OrganisationsResponse> orgDetails = new ArrayList<>();
-        orgDetails.add(resOrg1);
-        orgDetails.add(resOrg2);
-        orgDetails.add(resOrg3);
-
-        List<RepresentedTypeRItem> existingRepCollection = caseData.getRepCollection();
-        Address rep1Address = new Address();
-        rep1Address.setAddressLine1("Rep 1 - Address 1");
-        existingRepCollection.get(0).getValue().setRepresentativeAddress(rep1Address);
-        Address rep2Address = new Address();
-        rep2Address.setAddressLine1("Rep 2 - Address 1");
-        existingRepCollection.get(1).getValue().setRepresentativeAddress(rep2Address);
-        Address rep3Address = new Address();
-        rep3Address.setAddressLine1("Rep 3 - Address 1");
-        existingRepCollection.get(2).getValue().setRepresentativeAddress(rep3Address);
-
-        when(organisationClient.getOrganisations(anyString(), anyString())).thenReturn(orgDetails);
-
-        CaseData returned = nocRespondentRepresentativeService.prepopulateOrgAddress(caseData, "someToken");
-
-        verify(organisationClient, times(1)).getOrganisations(anyString(), anyString());
-
-        List<RepresentedTypeRItem> repCollection = returned.getRepCollection();
-
-        Address representative1Org = repCollection.get(0).getValue().getRepresentativeAddress();
-        assertThat(representative1Org.getAddressLine1())
-                .isEqualTo(resOrg1.getContactInformation().get(0).getAddressLine1());
-
-        Address representative2Org = repCollection.get(1).getValue().getRepresentativeAddress();
-        assertThat(representative2Org.getAddressLine1())
-                .isEqualTo(rep2Address.getAddressLine1());
-
-        Address representative3Org = repCollection.get(2).getValue().getRepresentativeAddress();
-        assertThat(representative3Org.getAddressLine1())
-                .isEqualTo(resOrg3.getContactInformation().get(0).getAddressLine1());
     }
 
     @Test
